--- a/app/src/main/res/layout/fragment_tif_hurdaya_ayirma.xml
+++ b/app/src/main/res/layout/fragment_tif_hurdaya_ayirma.xml
@@ -2,15 +2,15 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.fragments.TifIslem1Fragment">
+    tools:context=".ui.fragments.TifIslemTransferFragment">
         <data>
             <variable
                 name="viewModel"
-                type="com.uniyaz.mobiltif.viewmodel.TifIslem3ViewModel" />
+                type="com.uniyaz.mobiltif.viewmodel.TifIslemHurdayaAyirmaViewModel" />
         </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -24,8 +24,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
+                android:layout_height="@dimen/editTextHeight"
                 android:paddingBottom="10dp"
                 android:background="@drawable/bg_edittext"
                 android:hint="İşlem Tarihi"
@@ -46,7 +45,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/editTextHeight"
                 android:background="@drawable/bg_edittext"
-                android:translationY="10dp"
                 android:hint="Dayanak Belge Tarihi"
                 android:text="@={viewModel.dayanakBelgeTarihi}"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -184,7 +182,7 @@
                 android:layout_height="@dimen/editTextHeight"
                 android:background="@drawable/bg_edittext"
                 android:hint="*Harcama Yetkilisi"
-                android:text="=@{viewModel.harcamaYetkilisiAdi}"/>
+                android:text="@={viewModel.harcamaYetkilisiAdi}"/>
         </com.google.android.material.textfield.TextInputLayout>
 
 
