--- a/app/src/main/res/layout/popup_call_room_and_envanter.xml
+++ b/app/src/main/res/layout/popup_call_room_and_envanter.xml
@@ -3,35 +3,66 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    tools:context=".CallRoomAndEnvanterFragment">
+    android:layout_height="match_parent"
+    android:background="#679bcb"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
 
 
     <Button
         android:id="@+id/btnCallRoom"
-        android:layout_width="0dp"
-        android:layout_height="49dp"
+        android:layout_width="212dp"
+        android:layout_height="51dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
-        android:text="Oda Ara"
+        android:background="@mipmap/oda_search"
+        android:text="ODA"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnCallEnvanter"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="44dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="20dp"
-        android:text="Envanter Ara"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@mipmap/demirbas_search"
+        android:text="DEMİRBAŞ"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="@+id/btnCallRoom"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/btnCallRoom"
-        app:layout_constraintTop_toBottomOf="@+id/btnCallRoom"
-        app:layout_constraintVertical_bias="0.417" />
+        app:layout_constraintTop_toBottomOf="@+id/etCallQrCodeOda" />
+
+    <EditText
+        android:id="@+id/etCallQrCodeOda"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/editTextHeight"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/bg_edittext"
+        android:drawableRight="@drawable/ic_search"
+        android:text="61"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCallRoom" />
+
+    <EditText
+        android:id="@+id/etCallQrCodeDemirbas"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/editTextHeight"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/bg_edittext"
+        android:drawableRight="@drawable/ic_search"
+        android:text="61"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/etCallQrCodeOda"
+        app:layout_constraintHorizontal_bias="0.648"
+        app:layout_constraintStart_toStartOf="@+id/etCallQrCodeOda"
+        app:layout_constraintTop_toBottomOf="@+id/btnCallEnvanter" />
 </androidx.constraintlayout.widget.ConstraintLayout>
