--- a/app/src/main/res/layout/popup_call_room_and_envanter.xml
+++ b/app/src/main/res/layout/popup_call_room_and_envanter.xml
@@ -1,38 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#679bcb"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
 
-
-    <Button
+    <com.uniyaz.mobiltif.ui.components.CustomButtonSearch
         android:id="@+id/btnCallRoom"
         android:layout_width="212dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@mipmap/oda_search"
-        android:text="ODA"
+        android:layout_height="151dp"
+        app:buttonText="ODA"
         android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <com.uniyaz.mobiltif.ui.components.CustomButtonSearch
         android:id="@+id/btnCallEnvanter"
-        android:layout_width="216dp"
-        android:layout_height="44dp"
+        android:layout_width="212dp"
+        android:layout_height="151dp"
         android:layout_marginTop="8dp"
-        android:background="@mipmap/demirbas_search"
-        android:text="DEMİRBAŞ"
+        app:buttonText="DEMİRBAŞ"
         android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="@+id/btnCallRoom"
         app:layout_constraintStart_toStartOf="@+id/btnCallRoom"
-        app:layout_constraintTop_toBottomOf="@+id/etCallQrCodeOda" />
+        app:layout_constraintTop_toBottomOf="@+id/etCallQrCodeOda"/>
 
     <EditText
         android:id="@+id/etCallQrCodeOda"
