--- a/app/src/main/res/layout/popup_show_image.xml
+++ b/app/src/main/res/layout/popup_show_image.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorWhite">
 
     <com.uniyaz.mobiltif.ui.components.TouchImageView
         android:id="@+id/ivShowImageFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY">
+        android:layout_height="match_parent">
 
     </com.uniyaz.mobiltif.ui.components.TouchImageView>
 </FrameLayout>
