Zimmet İade, zimmet ve zimmet devri ekranları tasarlandı. Bunun üzerine servise gönderilecek hale getirildi. Tasarım deseni oluşturuldu

--- a/app/src/main/res/layout/activity_login_gelistir.xml
+++ b/app/src/main/res/layout/activity_login_gelistir.xml
@@ -157,7 +157,7 @@
                 android:onClick="@{()->activity.onBtnLoginClicked()}"
                 android:text="@string/btn_login"
                 android:textColor="#ffffff"
-                app:layout_constraintBottom_toBottomOf="@+id/view"
+                app:layout_constraintBottom_toBottomOf="@+id/view1"
                 app:layout_constraintEnd_toEndOf="@+id/etPassword"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/etPassword"
