--- a/app/src/main/res/layout/item_tif_islem.xml
+++ b/app/src/main/res/layout/item_tif_islem.xml
@@ -16,19 +16,27 @@
         android:layout_marginTop="10dp"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tvIslemTuru"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="İşlem Türü"
+            style="@style/InputLabel"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:background="@drawable/bg_spinner"
-            android:entries="@array/arrayIslemTurleri"
             android:onItemSelected="@{(parent,view,pos,id)->fragment.onItemSelectedSpinner(parent,view,pos,id)}"
             android:spinnerMode="dropdown"
             android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@+id/tvIslemTuru"
+            app:layout_constraintRight_toRightOf="@+id/tvIslemTuru"
+            app:layout_constraintStart_toStartOf="@+id/tvIslemTuru"/>
 
         <FrameLayout
             android:id="@+id/f_layout"
