Login ve mainActivity işlemleri tif işlemleri

--- a/app/src/main/res/layout/item_envanter_tif_card.xml
+++ b/app/src/main/res/layout/item_envanter_tif_card.xml
@@ -4,17 +4,13 @@
 
     <data>
 
+        <import type="android.text.Html" />
+
         <variable
             name="viewModel"
             type="com.uniyaz.mobiltif.viewmodel.TifEnvanterCardViewModel" />
     </data>
 
-    <!--<androidx.cardview.widget.CardView-->
-    <!--android:id="@+id/cardView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:background="@color/colorItemEnvanterCardBGround"-->
-    <!--&gt;-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -76,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@{viewModel.labelAlt}"
+            android:text="@{Html.fromHtml(viewModel.labelAlt)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tvUst"
             app:layout_constraintHorizontal_bias="0.0"
